--- a/002 - my-app/src/app/app.component.html
+++ b/002 - my-app/src/app/app.component.html
@@ -6,18 +6,18 @@
 -->
 
 <div class="container">
-    <!-- <div class="row">
+    <div class="row">
         <div class="col-xs-12">
             <h3>Utilizzo dei componenti:</h3>
             <app-servers></app-servers>
-            <div app-servers></div>
-            <div class="app-servers"></div>
+            <!--<div app-servers></div>
+            <div class="app-servers"></div>-->
         </div>
-    </div> -->
-    <div class="row">
+    </div>
+    <!--<div class="row">
         <div class="col-xs-12">
             <h3>Esercitazione: Pratcticing Databinding</h3>
             <app-practicing-databinding></app-practicing-databinding>
         </div>
-    </div>
+    </div>-->
 </div>
