--- a/002 - my-app/src/app/practicing-databinding/practicing-databinding.component.html
+++ b/002 - my-app/src/app/practicing-databinding/practicing-databinding.component.html
@@ -7,9 +7,9 @@
 </ol>
 <h4>RESULTS</h4>
 <!--TODO: Esercizio-->
-<input type="text" class="form-control" [(ngModel)]="username" (ngModelChange)="enableButton()"/>
+<input type="text" class="form-control" [(ngModel)]="username"/>
 <br>
-<button class="btn btn-primary" [disabled]="!allowSend" (click)="onCreateUsername()">Add Username</button>
+<button class="btn btn-primary" [disabled]="username === ''" (click)="onCreateUsername()">Add Username</button>
 <br>
 <br>
 {{newUsername}}
