--- a/002 - my-app/src/app/servers/servers.component.html
+++ b/002 - my-app/src/app/servers/servers.component.html
@@ -2,9 +2,15 @@
 <label>Server Name</label>
 <!--<input type="text" class="form-control" (input)="onUpdateServerName($event)"/>-->
 <input type="text" class="form-control" [(ngModel)]="serverName"/>
+<br>
 <button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()">Add Server</button>
 <hr>
-{{serverCreationStatus}}
+<!--{{serverCreationStatus}}-->
+<p *ngIf="serverCreated; else noServer"> Server was created!, server name is {{serverName}}.</p>
+<!--<p *ngIf="!serverCreated">No server was created</p>-->
+<ng-template #noServer>
+    <p>No server was created!</p>
+</ng-template>
 <hr>
 <app-server></app-server>
 <hr>
